--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,11 @@ file (GLOB FILES
 	"libwebserver/*.c*"
 )
 
+IF( NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
+	list(REMOVE_ITEM FILES ${CMAKE_CURRENT_SOURCE_DIR}/libwebserver/dirent.c)
+	list(REMOVE_ITEM FILES ${CMAKE_CURRENT_SOURCE_DIR}/libwebserver/dirent.h)
+ENDIF( NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
+
 include_directories(libwebserver)
 include_directories(${LUA_INCLUDE_DIR})
 
